src/components/App.css
/* ... */
.conditions {
  column-count: 3;
  list-style: none;
  margin: 0px;
  padding: 0px;
  display: inline-block;
  column-gap: 44px;
}

@media only screen and (max-width: 600px) {
  .conditions {
    column-count: 2;
    column-gap: 32px;
  }
}

@media only screen and (max-width: 280px) {
  .conditions {
    column-count: 1;
  }
}

.condition {
  list-style: none;
}

.condition [role="checkbox"] {
  display: inline-block;
  padding: 4px 8px;
  cursor: pointer;
  border-radius: 15px;
  margin-bottom: 8px;
}

.condition [role="checkbox"]::before {
  position: relative;
  top: 1px;
  left: -4px;
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='16' width='16' style='forced-color-adjust: auto;'%3E%3Crect x='2' y='2' height='13' width='13' rx='2' stroke='currentcolor' stroke-width='1' fill-opacity='0' /%3E%3C/svg%3E");
}

.condition [role="checkbox"][aria-checked="true"]::before {
  position: relative;
  top: 1px;
  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='16' width='16' style='forced-color-adjust: auto;'%3E%3Crect x='2' y='2' height='13' width='13' rx='2' stroke='currentcolor' stroke-width='1' fill-opacity='0' /%3E%3Ccircle cx='8.5' cy='8.5' r='4' stroke='%23822000' stroke-width='1' fill='%23822000' fillOpacity='1' /%3E%3C/svg%3E");
}

.condition [role="checkbox"]:hover {
  padding: 3px 7px;
  background-color: #EBE1AD;
  border: 1px solid #822000;
  box-shadow: 0 0 5px #979aa4;
  outline: none;
}

.condition [role="checkbox"]:focus-within {
  padding: 3px 7px;
  background-color: #EBE1AD;
  border: 1px solid #822000;
  outline: 1px solid #822000;
  outline-offset: 2px;
  box-shadow: 0 0 5px #979aa4;
}

/* Create creature form */

.create-creature-form {
  width: 100%;
  margin-top: 20px;
  justify-content: center;
  grid-gap: 22px;
  display: grid;
  grid-template-columns: repeat(auto-fit, 15px);
}

.create-creature-form--quantity-wrapper {
  display: flex;
  width: 100%;
  grid-column: span 3;
  align-items: center;
}

.create-creature-form--quantity-symbol {
  margin-right: 5px;
  margin-top: 26px;
  font-weight: 700;
}

.create-creature-form--quantity-wrapper input {
  font-weight: 700;
}

.create-creature-form--item__submit {
  display: flex;
  flex-direction: column;
  grid-column: span 2;
  justify-content: flex-end;
}

.create-creature-form--item__tall {
  margin-top: -18px;
  line-height: 20px;
}

.create-creature-form--submit {
  grid-column: span 2;
}

/*
 * Ensure create creature form is centered on two rows on medium screens
 */
@media only screen and (min-width: 825px) and (max-width: 1175px) {
  .create-creature-form {
    width: unset;
  }

  .create-creature-form--item__text {
    grid-column: span 10;
  }

  .create-creature-form--item__submit {
    margin-left: 7px;
  }
}

/*
 * Ensure create creature form is centered on multiple rows on small screens
 */
@media only screen and (max-width: 825px) {
  .create-creature-form {
    grid-template-columns: repeat(6, 25px);
    grid-row-gap: 15px;
    grid-column-gap: 60px;
  }

  .create-creature-form--item__text {
    grid-column: 2 / span 4;
  }

  .create-creature-form--item__number {
    grid-column: 2 / span 4;
  }

  .create-creature-form--quantity-wrapper {
    grid-column: 2 / span 2;
    margin-left: 40px;
  }

  .create-creature-form--item__quantity {
    grid-column: 2 / span 2;
  }

  .create-creature-form--item__submit {
    margin-left: 10px;
  }

  .create-creature-form--item__quantity .form--label {
    text-align: center;
  }

  .create-creature-form--item__text .form--label {
    text-align: center;
  }

  .create-creature-form--item__number .form--label {
    text-align: center;
  }
  
  .create-creature-form--item__tall {
    margin-top: 0;
  }

  .create-creature-form--submit {
    grid-column: 4 / span 2;
  }
}

/* Creatures */

.creature-list {
  width: 80%;
  margin-bottom: 40px;
}

.creature-wrapper {
  border-top: 10px double #822000;
  border-bottom: 10px double #822000;
  border-left: 1px solid #822000;
  border-right: 1px solid #822000;
  box-shadow: 0 0 5px #979AA4;
  border-radius: 15px;
  margin: 60px 0 10px 0;
  padding: 10px;
  box-sizing: border-box;
}

.creature-wrapper__active {
  border-top: 10px solid #822000;
  border-bottom: 10px solid #822000;
}

.creature-wrapper__error {
  border-top: 10px double red;
  border-bottom: 10px double red;
  border-left: 1px solid red;
  border-right: 1px solid red;
}

/* Ensure the creature boxes take up 100% of the screen width for smaller screens. */
@media only screen and (max-width: 825px) {
  .creature-list {
    width: 100%;
  }

  .creature-wrapper {
    border-left: none;
    border-right: none;
    border-radius: 0;
  }

  .creature-wrapper__active {
    border-left: none;
    border-right: none;
  }
}

@media only screen and (max-width: 280px) {
  .creature-wrapper {
    padding: 10px 0;
  }
}

.creature-title {
  display: flex;
}

.creature-header {
  margin-top: 0;
  margin-bottom: 0;
}

.creature-expander-button {
  padding: 2px 4px;
  width: auto;
  height: auto;
  align-items: baseline;
}

.creature-expander-button:hover,
.creature-expander-button:focus {
  padding: 1px 3px;
}

@media only screen and (max-width: 1175px) {
  .creature-expander-button {
    border: none;
    box-shadow: none;
    background-color: transparent;
  }
}

.creature-expander-icon {
  margin-left: 10px;
  padding-top: 8px;
}

.creature-name {
  font-family: "IM Fell Great Primer SC";
  font-variant: small-caps;
  font-weight: bold;
  font-size: 28px;
  color: #822000;
  text-align: left;
  text-transform: capitalize;
  background: transparent;
  align-items: center;
}

.expanded-creature {
  padding-left: 4px;
}

@media only screen and (max-width: 825px) {
  .expanded-creature--name {
    white-space: unset;
    overflow: unset
  };
}

.expanded-creature--status {
  margin-top: 5px;
}

.expanded-creature--stat {
  margin-bottom: 10px;
  color: #822000;
}
/* ... */

